--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.ratingsoft">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -14,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BaixoMinhoLeagueSinActionBar"
         tools:targetApi="31">
+
         <activity
             android:name=".ui.menu.Perfil.Configuracion"
             android:screenOrientation="portrait"
