--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    //Retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 }
