--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.menu.Perfil.Configuracion"
+            android:name=".ui.model.Perfil.Configuracion"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".ui.menu.Inicio.ParticipantesActivity"
+            android:name=".ui.model.Inicio.ParticipantesActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
@@ -33,15 +33,15 @@
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".ui.menu.Inicio.DetailEvent"
+            android:name=".ui.model.Inicio.DetailEvent"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".ui.menu.Perfil.AddPlayerAndTournament"
+            android:name=".ui.model.Perfil.AddPlayerAndTournament"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".ui.menu.Jugadores.DetailJugador"
+            android:name=".ui.model.Users.DetailJugador"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
