--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    dependencies {
-        classpath 'com.google.gms:google-services:4.3.15'
+    repositories {
+        google()
+        jcenter()
     }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+        // Eliminado el plugin de google-services ya que no se va a utilizar
+    }
+}
 
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
 
 plugins {
-    id 'com.android.application' version '7.4.1' apply false
-    id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-
-
-
+    id 'com.android.application' version '7.4.1'
+    id 'org.jetbrains.kotlin.android' version '1.8.0'
 }
 
-
-
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
+}
