--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-buildscript {
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
-    }
-}
-
 plugins {
-    id 'com.android.application' version '7.4.1'
-    id 'org.jetbrains.kotlin.android' version '1.8.0'
-}
-
-tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+    id("com.android.application") version "8.1.1" apply false
+    id("org.jetbrains.kotlin.android") version "1.9.0" apply false
 }
