--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,49 +13,44 @@
         android:icon="@drawable/login1"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaixoMinhoLeagueSinActionBar"
+        android:theme="@style/Theme.Design.Light"
         tools:targetApi="31">
+
         <activity
             android:name=".Cursos.ListaCursosActivity"
             android:exported="false" />
+
         <activity
             android:name=".ui.Perfil.Configuracion"
             android:exported="false"
             android:screenOrientation="portrait" />
 
-
         <activity
             android:name=".ui.login.ResetPassword"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".NuevoEvento"
-            android:exported="false"
-            android:screenOrientation="portrait" />
 
-        <activity
-            android:name=".ui.Perfil.AddPlayerAndTournament"
-            android:exported="false"
-            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.Users.DetailJugador"
             android:exported="false"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.BaixoMinhoLeagueStartingSinActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.login.RegisterActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
