--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:icon="@drawable/login1"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Design.Light"
+        android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
 
-        <activity
+
+
+
+    <activity
             android:name=".Cursos.ListaCursosActivity"
             android:exported="false" />
 
