--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.BaixoMinhoLeagueSinActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".Cursos.ListaCursosActivity"
+            android:name=".data.ListaCursosActivity"
             android:exported="false" />
         <activity
             android:name=".ui.Perfil.Configuracion"
